cabal-version: 3.8
name:          H99
synopsis:      Ninty-Nine Haskell Problems modernized
version:       0.1.0.0
license:       Unlicense

common deps
  build-depends:      base
  default-language:   GHC2021
  ghc-options:        -Wall
  default-extensions: OverloadedStrings
                    , StrictData

library
  import:             deps
  hs-source-dirs:     src
  exposed-modules:    Arithmetic
                 ,    BTree
                 ,    Graph
                 ,    List
                 ,    Logic
                 ,    Misc
                 ,    MTree
